@@ -118,8 +118,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 4.6.2-alpha02
-@set doc-edition 4.6.2-alpha02
+@set nco-edition 4.6.2-beta01
+@set doc-edition 4.6.2-beta01
 @set copyright-years 1995--2016
 @set update-year 2016
 @set update-date 1 November 2016
