@@ -1,3 +1,7 @@
+2016-11-06  Charlie Zender  <zender@uci.edu>
+
+	* Add strsep() replacement code for MSVC
+
 2016-11-04  Charlie Zender  <zender@uci.edu>
 
 	* Implement/use jsn_typ_nm() to define JSON types
